Fix overlapping custom-select components

--- a/src/components/common/forms/custom-select.scss
+++ b/src/components/common/forms/custom-select.scss
@@ -70,6 +70,7 @@
     top: 100%;
     left: 0;
     right: 0;
+    z-index: 5;
 
     // Style the individual select options:
     div {
